@@ -1,6 +1,7 @@
 0.3 - 2005.05.10
  * Raise an IOError when an unsupported APE tag is found.
  * MPCFile#set_scale to adjust volume scaling.
+ * Use the new 'libmpcdec' instead of libmusepack.
 
 0.2 - 2005.04.25
  * Expose most of the stream information (thanks to Wim Speekenbrink).
